write first test and begin implementation

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,11 +1,32 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: ytdlp-operator
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - download.beebs.dev
+  resources:
+  - downloads
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - download.beebs.dev
+  resources:
+  - downloads/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - download.beebs.dev
+  resources:
+  - downloads/status
+  verbs:
+  - get
+  - patch
+  - update
