refactor download controller to support local storage and S3 uploads; update sample download configuration

--- a/config/samples/download_v1_download.yaml
+++ b/config/samples/download_v1_download.yaml
@@ -6,9 +6,9 @@ metadata:
     app.kubernetes.io/instance: download-sample
   name: test-download-live
 spec:
-  inputURL: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+  inputURL: "https://www.youtube.com/watch?v=Wb3UrJjAac4"
   output:
     s3:
       bucket: "my-operator-downloads"
-      key: "rickroll.mp4"
+      key: "dog-eats-burrito-in-one-second.mp4"
       secretRef: "s3-creds"
